welcome.lessons.welcome.instructions.Instructions.scala.code
for(1 to 3) forward()
